tests/ui/proc-macro/attr-stmt-expr.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/attr-stmt-expr.rs:24:5
   |
LL |     #[expect_my_macro_expr]
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/attr-stmt-expr.rs:62:5
   |
LL |     #[expect_expr]
   |     ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
